// ============================================================
// CORE DOMAIN — Relational Schema (DBML for dbdiagram.io)
// Source: core.puml (v5) × schema.prisma
// ============================================================

// ── ENUMS ────────────────────────────────────────────────────

Enum UserRole {
  STUDENT
  ADMIN
  INSTRUCTOR
}

Enum CardState {
  NEW
  LEARNING
  REVIEW
  RELEARNING
}

Enum SubscriptionTier {
  FREE
  PREMIUM
  PRO
}

Enum SubscriptionStatus {
  ACTIVE
  TRIALING
  PAST_DUE
  CANCELED
  EXPIRED
}

Enum PaymentProvider {
  MOCK
  VNPAY
  STRIPE
  MANUAL
}

Enum NotificationType {
  STREAK_MILESTONE
  LESSON_COMPLETED
  REVIEW_DUE
  DECK_MASTERED
  EXAM_GRADED
  NEW_EXAM_AVAILABLE
  DICTATION_COMPLETE
  NEW_LESSON
  SYSTEM_ANNOUNCEMENT
  ACHIEVEMENT
}

Enum PostType {
  STUDY_TIP
  SCORE_ACHIEVEMENT
  GENERAL
}

Enum VideoType {
  SHADOWING
  DICTATION
}

// ── IDENTITY ────────────────────────────────────────────────

Table users {
  id        varchar   [pk]
  email     varchar   [unique, not null]
  password  varchar   [null]
  googleId  varchar   [unique, null]
  avatar    varchar   [null]
  firstName varchar   [null]
  lastName  varchar   [null]
  role      UserRole  [not null, default: 'STUDENT']
  isActive  boolean   [not null, default: true]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

// ── VOCAB LAB (Spaced Repetition Flashcards) ────────────────

Table decks {
  id        varchar   [pk]
  userId    varchar   [not null]
  name      varchar   [not null]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table flashcards {
  id            varchar   [pk]
  deckId        varchar   [not null]
  front         varchar   [not null]
  back          text      [not null]
  tags          "varchar[]" [not null, default: '{}']
  due           timestamp [not null, default: `now()`]
  stability     float     [not null, default: 0]
  difficulty    float     [not null, default: 0]
  elapsedDays   int       [not null, default: 0]
  scheduledDays int       [not null, default: 0]
  reps          int       [not null, default: 0]
  lapses        int       [not null, default: 0]
  lastReview    timestamp [null]
  nextReviewDate timestamp [not null, default: `now()`]
  cardState     CardState [not null, default: 'NEW']
  cardTypeId    varchar   [null]
  fieldValues   json      [not null, default: '{}']
  fieldStyles   json      [null]
  cardStyle     json      [null]
  createdAt     timestamp [not null, default: `now()`]
  updatedAt     timestamp [not null]
}

Table flashcard_reviews {
  id            varchar    [pk]
  flashcardId   varchar    [not null]
  rating        int        [not null]
  reviewedAt    timestamp  [not null, default: `now()`]
  scheduledDays int        [not null, default: 0]
  elapsedDays   int        [not null, default: 0]
  state         CardState  [null]
}

Table card_types {
  id          varchar   [pk]
  userId      varchar   [null]
  name        varchar   [not null]
  description text      [null]
  isBuiltIn   boolean   [not null, default: false]
  createdAt   timestamp [not null, default: `now()`]
  updatedAt   timestamp [not null]
}

Table card_type_fields {
  id          varchar   [pk]
  cardTypeId  varchar   [not null]
  name        varchar   [not null]
  order       int       [not null]
  description varchar   [null]
  fieldType   varchar   [not null, default: 'text']
  createdAt   timestamp [not null, default: `now()`]
}

Table card_templates {
  id          varchar     [pk]
  cardTypeId  varchar     [not null]
  name        varchar     [not null]
  frontFields "varchar[]" [not null]
  backFields  "varchar[]" [not null]
  fieldStyles json        [not null, default: '{}']
  cardStyle   json        [not null, default: '{}']
  createdAt   timestamp   [not null, default: `now()`]
}

Table shared_decks {
  id           varchar   [pk]
  publisherId  varchar   [not null]
  name         varchar   [not null]
  description  text      [null]
  tags         "varchar[]" [not null]
  lexonPayload json      [not null]
  importCount  int       [not null, default: 0]
  createdAt    timestamp [not null, default: `now()`]
  updatedAt    timestamp [not null]

  indexes {
    publisherId
    importCount
  }
}

// ── QUESTION NOTES ──────────────────────────────────────────

Table question_notes {
  id             varchar   [pk]
  userId         varchar   [not null]
  examId         varchar   [not null]
  questionNumber int       [not null]
  noteText       text      [not null]
  createdAt      timestamp [not null, default: `now()`]
  updatedAt      timestamp [not null]

  indexes {
    (userId, examId, questionNumber) [unique]
  }
}

// ── VIDEO LEARNING (Shadowing & Dictation) ──────────────────

Table videos {
  id             varchar     [pk]
  userId         varchar     [null]
  title          varchar     [not null]
  youtubeVideoId varchar     [null]
  audioUrl       varchar     [null]
  imageUrl       varchar     [null]
  tags           "varchar[]" [not null, default: '{}']
  folder         varchar     [not null, default: 'All Videos']
  category       varchar     [not null, default: 'Other']
  duration       varchar     [not null]
  sentences      json        [not null]
  status         varchar     [not null, default: 'READY']
  createdAt      timestamp   [not null, default: `now()`]
  updatedAt      timestamp   [not null]

  indexes {
    userId
  }
}

Table video_folders {
  id     varchar [pk]
  userId varchar [not null]
  name   varchar [not null]
  order  int     [not null, default: 0]

  indexes {
    (userId, name) [unique]
  }
}

Table video_progress {
  id                 varchar   [pk]
  userId             varchar   [not null]
  videoId            varchar   [not null]
  completedSentences "int[]"   [not null]
  createdAt          timestamp [not null, default: `now()`]
  updatedAt          timestamp [not null]

  indexes {
    (userId, videoId) [unique]
    userId
  }
}

// ── STUDENT-TEACHER LINKING ─────────────────────────────────

Table student_teacher_links {
  id        varchar   [pk]
  studentId varchar   [not null]
  teacherId varchar   [not null]
  status    varchar   [not null, default: 'LINKED']
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]

  indexes {
    (studentId, teacherId) [unique]
  }
}

// ── NOTIFICATIONS ───────────────────────────────────────────

Table notifications {
  id        varchar          [pk]
  userId    varchar          [not null]
  type      NotificationType [not null]
  title     varchar          [not null]
  body      varchar          [not null]
  icon      varchar          [null]
  thumbnail varchar          [null]
  link      varchar          [null]
  isRead    boolean          [not null, default: false]
  createdAt timestamp        [not null, default: `now()`]

  indexes {
    (userId, isRead)
    (userId, createdAt)
  }
}

// ── GAMIFICATION ────────────────────────────────────────────

Table achievements {
  id          varchar   [pk]
  key         varchar   [unique, not null]
  name        varchar   [not null]
  description varchar   [not null]
  icon        varchar   [not null]
  category    varchar   [not null]
  tier        int       [not null, default: 1]
  xpReward    int       [not null, default: 0]
  order       int       [not null, default: 0]
  createdAt   timestamp [not null, default: `now()`]
}

Table user_achievements {
  id            varchar   [pk]
  userId        varchar   [not null]
  achievementId varchar   [not null]
  earnedAt      timestamp [not null, default: `now()`]

  indexes {
    (userId, achievementId) [unique]
  }
}

Table xp_logs {
  id        varchar   [pk]
  userId    varchar   [not null]
  amount    int       [not null]
  reason    varchar   [not null]
  createdAt timestamp [not null, default: `now()`]

  indexes {
    (userId, createdAt)
  }
}

// ── COMMUNITY ───────────────────────────────────────────────

Table posts {
  id            varchar     [pk]
  authorId      varchar     [not null]
  type          PostType    [not null, default: 'GENERAL']
  title         varchar     [null]
  body          text        [not null]
  imageUrls     "varchar[]" [not null, default: '{}']
  tags          "varchar[]" [not null, default: '{}']
  metadata      json        [null]
  likeCount     int         [not null, default: 0]
  commentCount  int         [not null, default: 0]
  bookmarkCount int         [not null, default: 0]
  isPinned      boolean     [not null, default: false]
  isHidden      boolean     [not null, default: false]
  createdAt     timestamp   [not null, default: `now()`]
  updatedAt     timestamp   [not null]

  indexes {
    authorId
    createdAt
    likeCount
  }
}

Table comments {
  id        varchar   [pk]
  postId    varchar   [not null]
  authorId  varchar   [not null]
  parentId  varchar   [null]
  body      text      [not null]
  isHidden  boolean   [not null, default: false]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]

  indexes {
    (postId, createdAt)
    authorId
  }
}

Table post_likes {
  id        varchar   [pk]
  postId    varchar   [not null]
  userId    varchar   [not null]
  createdAt timestamp [not null, default: `now()`]

  indexes {
    (postId, userId) [unique]
  }
}

Table post_bookmarks {
  id        varchar   [pk]
  postId    varchar   [not null]
  userId    varchar   [not null]
  createdAt timestamp [not null, default: `now()`]

  indexes {
    (postId, userId) [unique]
  }
}

// ── BILLING / SUBSCRIPTIONS ─────────────────────────────────

Table subscriptions {
  id                 varchar            [pk]
  userId             varchar            [unique, not null]
  tier               SubscriptionTier   [not null, default: 'FREE']
  status             SubscriptionStatus [not null, default: 'ACTIVE']
  provider           PaymentProvider    [null]
  providerSubId      varchar            [null]
  currentPeriodStart timestamp          [null]
  currentPeriodEnd   timestamp          [null]
  canceledAt         timestamp          [null]
  trialEndsAt        timestamp          [null]
  trialUsed          boolean            [not null, default: false]
  createdAt          timestamp          [not null, default: `now()`]
  updatedAt          timestamp          [not null]
}

Table payments {
  id             varchar         [pk]
  subscriptionId varchar         [not null]
  amount         int             [not null]
  currency       varchar         [not null, default: 'USD']
  provider       PaymentProvider [not null]
  providerPayId  varchar         [null]
  status         varchar         [not null]
  metadata       json            [null]
  createdAt      timestamp       [not null, default: `now()`]

  indexes {
    subscriptionId
  }
}

Table usage_records {
  id             varchar   [pk]
  subscriptionId varchar   [not null]
  feature        varchar   [not null]
  count          int       [not null, default: 0]
  periodStart    timestamp [not null]
  periodEnd      timestamp [not null]
  createdAt      timestamp [not null, default: `now()`]
  updatedAt      timestamp [not null]

  indexes {
    (subscriptionId, feature, periodStart) [unique]
  }
}

Table pricing_plans {
  id            varchar          [pk]
  tier          SubscriptionTier [not null]
  name          varchar          [not null]
  description   varchar          [null]
  priceAmount   int              [not null]
  currency      varchar          [not null, default: 'USD']
  interval      varchar          [not null]
  intervalCount int              [not null, default: 1]
  features      json             [not null]
  isActive      boolean          [not null, default: true]
  order         int              [not null, default: 0]
  createdAt     timestamp        [not null, default: `now()`]
  updatedAt     timestamp        [not null]
}

// ============================================================
// REFERENCES
// ============================================================

// ── Vocab Lab ──
Ref: decks.userId > users.id [delete: cascade]
Ref: flashcards.deckId > decks.id [delete: cascade]
Ref: flashcards.cardTypeId > card_types.id
Ref: flashcard_reviews.flashcardId > flashcards.id [delete: cascade]
Ref: card_type_fields.cardTypeId > card_types.id [delete: cascade]
Ref: card_templates.cardTypeId > card_types.id [delete: cascade]
Ref: shared_decks.publisherId > users.id [delete: cascade]

// ── Question Notes ──
Ref: question_notes.userId > users.id [delete: cascade]

// ── Video Learning ──
Ref: videos.userId > users.id [delete: cascade]
Ref: video_folders.userId > users.id [delete: cascade]
Ref: video_progress.userId > users.id [delete: cascade]
Ref: video_progress.videoId > videos.id [delete: cascade]

// ── Student-Teacher ──
Ref: student_teacher_links.studentId > users.id [delete: cascade]
Ref: student_teacher_links.teacherId > users.id [delete: cascade]

// ── Notifications ──
Ref: notifications.userId > users.id [delete: cascade]

// ── Gamification ──
Ref: user_achievements.userId > users.id [delete: cascade]
Ref: user_achievements.achievementId > achievements.id [delete: cascade]
Ref: xp_logs.userId > users.id [delete: cascade]

// ── Community ──
Ref: posts.authorId > users.id [delete: cascade]
Ref: comments.postId > posts.id [delete: cascade]
Ref: comments.authorId > users.id [delete: cascade]
Ref: comments.parentId > comments.id [delete: cascade]
Ref: post_likes.postId > posts.id [delete: cascade]
Ref: post_likes.userId > users.id [delete: cascade]
Ref: post_bookmarks.postId > posts.id [delete: cascade]
Ref: post_bookmarks.userId > users.id [delete: cascade]

// ── Billing ──
Ref: subscriptions.userId > users.id [delete: cascade]
Ref: payments.subscriptionId > subscriptions.id [delete: cascade]
Ref: usage_records.subscriptionId > subscriptions.id [delete: cascade]

// ============================================================
// TABLE GROUPS
// ============================================================

TableGroup Identity {
  users
}

TableGroup VocabLab {
  decks
  flashcards
  flashcard_reviews
  card_types
  card_type_fields
  card_templates
  shared_decks
}

TableGroup VideoLearning {
  videos
  video_folders
  video_progress
}

TableGroup Platform {
  question_notes
  student_teacher_links
  notifications
}

TableGroup Gamification {
  achievements
  user_achievements
  xp_logs
}

TableGroup Community {
  posts
  comments
  post_likes
  post_bookmarks
}

TableGroup Billing {
  subscriptions
  payments
  usage_records
  pricing_plans
}
